# snap-export-to-google-photos-gcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  deploy-cloud-run.yml  deploy.yml  update-lockfile.yml
app/: main.py
app/adapters/db/: firestore.py  (+1 more)
app/api/: routes.py
app/config/: settings.py
app/core/: container.py  middleware.py
app/domain/: enums.py  interfaces.py
app/models/: job.py
app/services/: import_service.py  oauth_service.py  report_service.py  session_service.py  staging_service.py  task_service.py
app/utils/: files.py  logging.py  media.py  retry.py  signed_tokens.py  timestamps.py
app/workers/: worker.py
docs/: api-frontend.md  architecture.md  deployment-gcp.md  google-photos-flow.md  import-manifest.md  oauth-google-photos.md  observability-gcp.md  operations.md  security.md
frontend/: .env.example  Dockerfile  index.html  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css  types.ts
infra/: cloudrun-service.yaml
infra/cloudrun/: env.example.yaml
infra/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
scripts/: bootstrap_local.sh  gcloud_setup.sh  render_env.sh  seed_local_data.py  set-gcp-secrets.ps1  set_gcp_secrets.sh  smoke_test.sh  tf.sh
tests/: conftest.py  test_api.py  test_files.py  test_google_photos_client.py  test_import_service.py  test_timestamps_and_dedupe.py
(+41 files in other folders)
