[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snap-export-to-google-photos-gcp"
version = "0.1.0"
description = "Personal-use Snapchat export to Google Photos importer"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "python-multipart>=0.0.9",
  "httpx>=0.27.0",
  "google-auth>=2.32.0",
  "google-auth-oauthlib>=1.2.1",
  "google-cloud-storage>=2.18.0",
  "google-cloud-firestore>=2.17.0",
  "google-cloud-secret-manager>=2.20.0",
  "google-cloud-tasks>=2.16.0",
  "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  "black>=24.8.0",
  "mypy>=1.11.0",
  "types-python-dateutil>=2.9.0.20240316",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
